src/components/PortfolioPage/PortfolioPage.scss
@import '../../assets/styles/variables.scss';

.PortfolioPage {
    height: 100vh;
    background-color: $background;
    color: $background-text;
    display: flex;
    flex-direction: column;

    .PortfolioPage-title {
        font-size: 2rem;
        margin-bottom: $standard-spacing;
        font-weight: 200;

        &::first-letter{
            color: $secondary;
            font-weight: bold;
        }
    }

    .PortfolioPage-heading {
        color: $secondary;
        font-weight: bold;
        text-decoration: underline;
    }

    .PortfolioPage-header {
        background-color: rgba($white, 0.05);
        color: $primary;
        padding: $standard-spacing;

        .PortfolioPage-header-icons {
            display: flex;
            font-size: 2rem;
            justify-content: space-between;
            position: relative;

            &::after {
                content: '';
                background-color: rgba($secondary, 0.2);
                height: 2px;
                width: 100%;
                position: absolute;
                top: 1.5rem;
            }

            .PortfolioPage-header-iconsGroup {
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;

                .Portfolio-header-icon {
                    height: 3rem;
                    width: 3rem;
                    align-items: center;
                    background-color: $primary;
                    border-radius: 50%;
                    color: $primary-text;
                    display: flex;
                    flex-shrink: 0;
                    justify-content: center;
                    margin-bottom: 1rem;
                    z-index: 1;
    
                    &.selected {
                        background-color: $secondary;
                    }
                }
    
                .Portfolio-header-iconLabel {
                    font-size: 1rem;

                        
                    &.selected {
                        color: $secondary;
                    }
                }
            }
        }
    }
    
    .PortfolioPage-content {
        flex: 1;
        overflow: auto;
        scroll-behavior: smooth;

        .PortfolioPage-section {
            min-height: 300px;
            padding: $standard-spacing;

            &:not(:last-child) {
                border-bottom: 1px solid $primary;
            }
        }
    }
}

